@@ -54,7 +54,7 @@ bool CSTLMeshWriter::writeMesh(io::IWriteFile* file, scene::IMesh* mesh, s32 fla
 
 	os::Printer::log("Writing mesh", file->getFileName());
 
-	if (flags & scene::EMWF_WRITE_COMPRESSED)
+	if (flags & (scene::EMWF_WRITE_BINARY|scene::EMWF_WRITE_COMPRESSED) )
 		return writeMeshBinary(file, mesh, flags);
 	else
 		return writeMeshASCII(file, mesh, flags);
